classDiagram
    Account --|> Wallet
    Wallet --|> Utils
    Account --|> Utils
    class Wallet {
        id: UNIQUE UUID
        seed: encrypt(TEXT) 
        password: encrypt(TEXT)
        created_at: TIMESTAMP
    }

    class Account {
        id: UNIQUE UUID
        wallet_id: Wallet(id)
        index: u32
        xpub: encrypt(pub_key + chain_code)
        xprv?: encrypt(prv_key + chain_code)
        created_at: TIMESTAMP
    }


    class Utils {
        encrypt(string)
        decrypt(string)
        generate_mnemonic()
        derive_seed()
    }
